manifests/webserver-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-webserver
  namespace: nico-demo-vm
spec:
  type: ClusterIP
  selector:
    app: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
